--- a/main.tex
+++ b/main.tex
@@ -135,7 +135,9 @@ R )$ to Taylor's Theorem to Clairut's Theorem.
 
 \item Nonmeasurable set
 
-\item FIx step count
+\item Fix step count
+
+\item Change ``star-refinement'' to ``the star refines''. 
 \end{itemize}
 
 
