--- a/math_commands.tex
+++ b/math_commands.tex
@@ -146,6 +146,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 
 % Categories
+\newcommand{\AlE}{\mathsf{AlE}}
 \newcommand{\Ab}{\mathsf{Ab}}
 \newcommand{\Alg}{\mathsf{Alg}}
 \newcommand{\Cat}{\mathsf{Cat}}
