--- a/structure.tex
+++ b/structure.tex
@@ -558,6 +558,9 @@ addtohook={%
 \newtheorem{definitionT}[equation]{Definition}
 \crefname{definitionT}{Definition}{Definitions}
 
+\newtheorem{metaDefinitionT}[equation]{Meta-definition}
+\crefname{metaDefinitionT}{Meta-definition}{Meta-definitions}
+
 \theoremstyle{ocrenum}
 
 \newtheorem{corollaryT}[equation]{Corollary}
@@ -575,7 +578,8 @@ addtohook={%
 
 \newenvironment{thm}{\begin{tBox}\begin{theoremT}}{\end{theoremT}\end{tBox}}
 \newenvironment{exr}{\begin{eBox}\begin{exerciseT}}{\hfill{\color{ocre}\tiny\ensuremath{\blacksquare}}\end{exerciseT}\end{eBox}}				  
-\newenvironment{dfn}{\begin{dBox}\begin{definitionT}}{\end{definitionT}\end{dBox}}	
+\newenvironment{dfn}{\begin{dBox}\begin{definitionT}}{\end{definitionT}\end{dBox}}
+\newenvironment{mdf}{\begin{dBox}\begin{metaDefinitionT}}{\end{metaDefinitionT}\end{dBox}}
 \newenvironment{exm}{\begin{dBox}\begin{exampleT}}{\hfill{\tiny\ensuremath{\blacksquare}}\end{exampleT}\end{dBox}}		
 \newenvironment{crl}{\begin{cBox}\begin{corollaryT}}{\end{corollaryT}\end{cBox}}
 \newenvironment{lma}{\begin{cBox}\begin{lemmaT}}{\end{lemmaT}\end{cBox}}
